# Horny-Grail

./: .gitignore  AGENTS.md  README.md  steps.md
.github/workflows/: front-deploy.yml
.junie/: guidelines.md
docs/: mobile-api-reference.md  mobile-client-plan.md  project-review-discussion.md  security.md  tasks.md  upload-contract.md
docs/aws/: upload-bucket-cors.json  upload-bucket-policy-baseline.json
front/: .env.example  README.md  package.json  svelte.config.js
front/src/: app.html
front/src/components/: Button.svelte  Thumbnail.svelte
front/src/routes/: +error.svelte  +layout.svelte
front/tests/: test.js
local/desktop-app/: .env.example  README.md  package.json
local/desktop-app/scripts/: ensure-ffmpeg.mjs
local/desktop-app/src/: app.html
local/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
local/desktop-app/src-tauri/capabilities/: default.json
local/desktop-app/src-tauri/icons/: icon.icns
local/desktop-app/src-tauri/src/: lib.rs
local/mobile-app/: README.md  capacitor.config.json  jsconfig.json  mobile.private.example.json  package.json
local/mobile-app/scripts/: open-android-studio.mjs  prepare-private-config.mjs
local/mobile-app/src/: app.html
local/mobile-app/tests/: uploadQueueController.test.mjs
serverless/horny-grail-app/: README.md  env.example.json  env.json  jest.setup.mjs  package.json  template.yaml
serverless/horny-grail-app/api-test/: http test.http
serverless/horny-grail-app/cloudfront/: protected-read-frontend-rewrite.js
serverless/horny-grail-app/scripts/: sync-cloudfront-functions.mjs
(+68 files in other folders)
