[package]
name = "the-horny-grail"
version = "0.1.0"
description = "The Horny Grail App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "the_horny_grail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = { version = "2.5.1", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
wait-timeout = "0.2"
tauri-plugin-http = "2.5.9"
